EDD-3: Fixing the download location overflow bug

--- a/src/app/components/Button/Button.module.scss
+++ b/src/app/components/Button/Button.module.scss
@@ -7,10 +7,11 @@
   outline: none;
   border-radius: 0.25rem;
   border: 1px solid var(--color__black--150);
-  color: var(--color__black--700);
+  color: var(--color__black--600);
   font-size: 0.875rem;
   font-weight: 500;
   text-decoration: none;
+  letter-spacing: 1.03;
   transition: all 0.1s ease-in-out;
   cursor: pointer;
   -webkit-app-region: no-drag;
@@ -18,6 +19,7 @@
   &:hover {
     background-color: var(--color__black--100);
     color: var(--color__black--850);
+    border: 1px solid var(--color__black--200);
   }
 
   &.lg {
@@ -73,5 +75,5 @@
 
 .icon {
   vertical-align: middle;
-  margin-right: var(--size__100);
+  margin-right: var(--size__150);
 }
