--- a/src/app/dialogs/InitializeDownload/InitializeDownload.module.scss
+++ b/src/app/dialogs/InitializeDownload/InitializeDownload.module.scss
@@ -10,19 +10,32 @@
   color: var(--color__text--normal);
 }
 
-.downloadLocationText {
+.downloadLocationWrapper {
+  display: flex;
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
 }
 
-.downloadLocation {
-  display: inline-flex;
+// .downloadLocationText {
+//   display: block;
+//   overflow: hidden;
+//   white-space: nowrap;
+//   text-overflow: ellipsis;
+//   direction: rtl;
+// }
+
+.downloadLocationButton {
+  display: flex;
+  flex-grow: 0;
+  flex-shrink: 1;
+  max-width: 100%;
   align-items: center;
   padding: var(--size__150) var(--size__350);
   margin-bottom: var(--size__250);
   color: var(--color__text--dark);
   font-size: 0.875rem;
+  font-weight: 700;
   background-color: var(--color__black--100);
   border: 1px solid var(--color__black--150);
   border-radius: var(--size__350);
@@ -37,6 +50,8 @@
 .downloadLocationIcon {
   margin-right: var(--size__150);
   color: var(--color__black--500);
+  flex-shrink: 0;
+  flex-grow: 0;
 }
 
 .options {
